force-app/main/default/objects/Employe__c/Employe__c.object-meta.xml
<CustomObject>
    <description>Objet pour gérer les employés avec leurs métriques de performance et risque de turnover.</description>
    <label>Employee</label>
    <nameField>
        <label>Employe Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>