force-app/main/default/objects/Employe__c/fields/Absence_Days_YTD__c.field-meta.xml
<CustomField>
    <fullName>Absence_Days_YTD__c</fullName>
    <label>Absence Days YTD</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>