force-app/main/default/objects/Employe__c/fields/Anciennete_Jours__c.field-meta.xml
<CustomField>
    <fullName>Anciennete_Jours__c</fullName>
    <description>Nombre de jours depuis la date d&apos;embauche</description>
    <formula>TODAY() - Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ancienneté (jours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>