force-app/main/default/objects/Employe__c/fields/Behavioral_Score__c.field-meta.xml
<CustomField>
    <fullName>Behavioral_Score__c</fullName>
    <description>Score compétences comportementales (0-100)</description>
    <label>Score comportemental</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>