force-app/main/default/objects/Employe__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CDI</fullName>
            </value>
            <value>
                <fullName>CDD</fullName>
            </value>
            <value>
                <fullName>Stage</fullName>
            </value>
            <value>
                <fullName>Freelance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>