force-app/main/default/objects/Employe__c/fields/Departed__c.field-meta.xml
<CustomField>
    <fullName>Departed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Departed</label>
    <type>Checkbox</type>
</CustomField>