force-app/main/default/objects/Employe__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employe__c</referenceTo>
    <relationshipLabel>Employees (Employee)</relationshipLabel>
    <relationshipName>Employees1</relationshipName>
    <type>Lookup</type>
</CustomField>