force-app/main/default/objects/Employe__c/fields/Internal_Mobility_Requests__c.field-meta.xml
<CustomField>
    <fullName>Internal_Mobility_Requests__c</fullName>
    <label>Internal Mobility Requests</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>