force-app/main/default/objects/Employe__c/fields/Job_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Job_Satisfaction__c</fullName>
    <label>Job Satisfaction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>