force-app/main/default/objects/Employe__c/fields/Last_Promotion_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Promotion_Date__c</fullName>
    <description>Date de la dernière promotion</description>
    <label>Date dernière promotion</label>
    <type>Date</type>
</CustomField>