force-app/main/default/objects/Employe__c/fields/Manager_Support_Score__c.field-meta.xml
<CustomField>
    <fullName>Manager_Support_Score__c</fullName>
    <label>Manager Support Score</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>