force-app/main/default/objects/Employe__c/fields/Mois_Sans_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Mois_Sans_Promotion__c</fullName>
    <description>Nombre de mois depuis la dernière promotion</description>
    <formula>IF(ISBLANK(Last_Promotion_Date__c), 0, FLOOR((TODAY() - Last_Promotion_Date__c) / 30))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mois sans promotion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>