force-app/main/default/objects/Employe__c/fields/Objectives_Achievement__c.field-meta.xml
<CustomField>
    <fullName>Objectives_Achievement__c</fullName>
    <description>Taux d&apos;atteinte des objectifs (en pourcentage)</description>
    <label>Taux atteinte objectifs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>