force-app/main/default/objects/Employe__c/fields/Performance_Score_Composite__c.field-meta.xml
<CustomField>
    <fullName>Performance_Score_Composite__c</fullName>
    <description>Score de performance composite pondéré (Technique 40%, Comportemental 30%, Objectifs 30%)</description>
    <label>Score de performance composite</label>
    <formula>(Technical_Score__c * 0.4) + (Behavioral_Score__c * 0.3) + (Objectives_Achievement__c * 0.3 * 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>