force-app/main/default/objects/Employe__c/fields/Performance_Trend__c.field-meta.xml
<CustomField>
    <fullName>Performance_Trend__c</fullName>
    <description>Tendance de la performance (En hausse, Stable, En baisse)</description>
    <label>Tendance performance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En hausse</fullName>
            </value>
            <value>
                <fullName>Stable</fullName>
            </value>
            <value>
                <fullName>En baisse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>