force-app/main/default/objects/Employe__c/fields/Satisfaction_Score__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction_Score__c</fullName>
    <description>Score de satisfaction employé (0-10)</description>
    <label>Score satisfaction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>