force-app/main/default/objects/Employe__c/fields/Skill_Match_Score__c.field-meta.xml
<CustomField>
    <fullName>Skill_Match_Score__c</fullName>
    <label>Skill Match Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>