force-app/main/default/objects/Employe__c/fields/Technical_Score__c.field-meta.xml
<CustomField>
    <fullName>Technical_Score__c</fullName>
    <description>Score compétences techniques (0-100)</description>
    <label>Score technique</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>