force-app/main/default/objects/Employe__c/fields/Training_Count__c.field-meta.xml
<CustomField>
    <fullName>Training_Count__c</fullName>
    <label>Training Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>