force-app/main/default/objects/Employe__c/fields/Turnover_Risk__c.field-meta.xml
<CustomField>
    <fullName>Turnover_Risk__c</fullName>
    <label>Turnover Risk</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>