force-app/main/default/objects/Employe__c/fields/Work_Life_Balance__c.field-meta.xml
<CustomField>
    <fullName>Work_Life_Balance__c</fullName>
    <label>Work Life Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>