force-app/main/default/objects/Employe__c/fields/Years_at_Company__c.field-meta.xml
<CustomField>
    <fullName>Years_at_Company__c</fullName>
    <label>Years at Company</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>